--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1280 808" >
-	<image width="1280 " height="808" xlink:href="{% static 'estacionamento.png' %}" >
+	<image width="1280 " height="808" xlink:href="{% static 'vagas.png' %}" >
 	</image>
     <a>
           {%block rect %}
