--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,16 @@
             jQuery('.img-fluid').maphilight.defaults();
         });
     </script>
+    <script>
+
+function timedRefresh(timeoutPeriod) {
+	setTimeout("location.reload(true);",timeoutPeriod);
+}
+
+window.onload = timedRefresh(5000);
+
+//   -->
+</script>
 </head>
 
 <body>
